2014-10-21  Henri Doreau <henri.doreau@gmail.com>

	* nasl/nasl_builtin_find_service.c (fwd_data): Don't pre-allocate a
	buffer for internal_recv() and systematically free it after use.

2014-10-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/exec.c (nasl_exec): Add extra byte when allocating memory for
	CONST_DATA and CONST_STRING cases, used for null terminator.

2014-10-17  Michael Wiegand <michael.wiegand@greenbone.net>

	The required minimum version for the GnuTLS library has actually been
	2.12 for a while now. Adjust documentation and checks accordingly.

	* INSTALL: Update prerequisites.

	* CMakeLists: Adjust minimum version in gnutls check.

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta4.

2014-10-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0+beta3 release.

	* CHANGES: Updated.

2014-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/hash_table_file.c: Moved here from misc/.

	* base/hash_table_file.h: Moved here from misc/.

	* misc/hash_table_file.c: Moved to base/.

	* misc/hash_table_file.h: Moved to base/.

	* base/CMakeLists.txt: Added handling of module hash_table_file.

	* misc/CMakeLists.txt: Removed handling of module hash_table_file.

	* COPYING: Adapted directory accordingly.

2014-10-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Various fixes for issues identified via clang analysis.

	* misc/plugutils.c (plug_get_key): Removed dead assignment.

	* nasl/iconv.c (smb_iconv_open_ntlmssp): Removed dead assignment
	of variable "from" and "to".

	* nasl/nasl_builtin_openvas_tcp_scanner.c (banner_grab): Moved
	assignment into DEBUG code.

	* misc/network.c (read_stream_connection_unbuffered): Removed dead
	assigment of "now".

	* misc/www_funcs.c (build_encode_URL): Removed dead assignment of
	n_slash.

	* misc/ids_send.c (ids_send): Removed useless bzero of variable su.